--- a/salt/roots/git/config
+++ b/salt/roots/git/config
@@ -10,3 +10,5 @@
     lg = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)'
     snapshot = !git stash save "snapshot: $(date)" && git stash apply "stash@{0}"
     st = status -s
+[http]
+    sslVerify = false
